aligned products page, fixed link & image

--- a/css_files/products.css
+++ b/css_files/products.css
@@ -76,6 +76,7 @@
 	overflow:auto;
 	font-family:Arial, Helvetica, sans-serif;
 	margin:20px;
+	margin-top:30px;
 	float:right;
 	width:410px;
 	background-color: #E1ECF7;
